# src/swagger_server/models/__init__.py
@@ -5,6 +5,8 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.handler_validate_ip_request import HandlerValidateIPRequest
 from swagger_server.models.handler_validate_ip_response import HandlerValidateIPResponse
+from swagger_server.models.inline_response200 import InlineResponse200
+from swagger_server.models.inline_response2001 import InlineResponse2001
 from swagger_server.models.model_address import ModelAddress
 from swagger_server.models.model_query import ModelQuery
 from swagger_server.models.utils_http_error import UtilsHTTPError
