# src/swagger_server/models/inline_response2001.py
@@ -1,0 +1,114 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class InlineResponse2001(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, version: str=None, _date: int=None, kubernetes: bool=None):  # noqa: E501
+        """InlineResponse2001 - a model defined in Swagger
+
+        :param version: The version of this InlineResponse2001.  # noqa: E501
+        :type version: str
+        :param _date: The _date of this InlineResponse2001.  # noqa: E501
+        :type _date: int
+        :param kubernetes: The kubernetes of this InlineResponse2001.  # noqa: E501
+        :type kubernetes: bool
+        """
+        self.swagger_types = {
+            'version': str,
+            '_date': int,
+            'kubernetes': bool
+        }
+
+        self.attribute_map = {
+            'version': 'version',
+            '_date': 'date',
+            'kubernetes': 'kubernetes'
+        }
+        self._version = version
+        self.__date = _date
+        self._kubernetes = kubernetes
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse2001':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200_1 of this InlineResponse2001.  # noqa: E501
+        :rtype: InlineResponse2001
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def version(self) -> str:
+        """Gets the version of this InlineResponse2001.
+
+
+        :return: The version of this InlineResponse2001.
+        :rtype: str
+        """
+        return self._version
+
+    @version.setter
+    def version(self, version: str):
+        """Sets the version of this InlineResponse2001.
+
+
+        :param version: The version of this InlineResponse2001.
+        :type version: str
+        """
+
+        self._version = version
+
+    @property
+    def _date(self) -> int:
+        """Gets the _date of this InlineResponse2001.
+
+
+        :return: The _date of this InlineResponse2001.
+        :rtype: int
+        """
+        return self.__date
+
+    @_date.setter
+    def _date(self, _date: int):
+        """Sets the _date of this InlineResponse2001.
+
+
+        :param _date: The _date of this InlineResponse2001.
+        :type _date: int
+        """
+
+        self.__date = _date
+
+    @property
+    def kubernetes(self) -> bool:
+        """Gets the kubernetes of this InlineResponse2001.
+
+
+        :return: The kubernetes of this InlineResponse2001.
+        :rtype: bool
+        """
+        return self._kubernetes
+
+    @kubernetes.setter
+    def kubernetes(self, kubernetes: bool):
+        """Sets the kubernetes of this InlineResponse2001.
+
+
+        :param kubernetes: The kubernetes of this InlineResponse2001.
+        :type kubernetes: bool
+        """
+
+        self._kubernetes = kubernetes
